<resources>
    <string name="truyen">truyện</string>
    <string name="app_story">App Story</string>
    <string name="search">Search</string>
    <string name="view">View</string>
    <string name="chapter_number">Chapter </string>
    <string name="athur">Athur</string>
    <string name="category_r">Category</string>
    <string name="status_s">Status</string>
    <string name="describe">Describe</string>
    <string name="read_story">Read story</string>
    <string name="truy_n_hay"># TRUYỆN HAY</string>
    <string name="x_p_h_ng">XẾP HẠNG</string>
    <string name="bookmark">BOOKMARK</string>
    <string name="top_truy_n">TOP TRUYỆN</string>
    <string name="c_nhi_u_nh_t"># ĐỌC NHIỀU NHẤT</string>
    <string name="th_loai">THỂ LOẠI</string>
    <string name="chuy_n_m_c"># CHUYÊN MỤC</string>
    <string name="truy_n_c_a_b_n"># TRUYỆN CỦA BẠN</string>
    <string name="menu">MENU</string>
</resources>