<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/im_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/custom_ripple_view"
            android:paddingVertical="5dp"
            android:paddingEnd="5dp"
            android:src="@drawable/icon_menu_72"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/app_story"
            android:textColor="#A8000000"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/im_menu"
            app:layout_constraintLeft_toRightOf="@+id/im_menu"
            app:layout_constraintTop_toTopOf="@+id/im_menu" />

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_bg_search"
            android:drawableLeft="@drawable/icon_search_20"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:paddingVertical="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="15dp"
            android:text="@string/search"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/im_menu"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/im_menu" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/im_menu">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rc_item_story_banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintDimensionRatio="4:2.8"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_story_banner" />

                <TextView
                    android:id="@+id/tv_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/menu"
                    android:textAllCaps="true"
                    android:textColor="#B2202020"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rc_item_story_banner" />

                <com.example.appstory88.customview.ViewMenuHome
                    android:id="@+id/view_top_story"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintDimensionRatio="2:1.1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/view_rate_story"
                    app:layout_constraintTop_toBottomOf="@id/tv_menu"
                    app:textBottom="@string/truy_n_hay"
                    app:textTop="@string/top_truy_n" />

                <com.example.appstory88.customview.ViewMenuHome
                    android:id="@+id/view_rate_story"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintDimensionRatio="2:1.1"
                    app:layout_constraintLeft_toRightOf="@id/view_top_story"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/view_top_story"
                    app:textBottom="@string/c_nhi_u_nh_t"
                    app:textTop="@string/x_p_h_ng" />


                <com.example.appstory88.customview.ViewMenuHome
                    android:id="@+id/view_category_story"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintDimensionRatio="2:1.1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/view_book_mark_story"
                    app:layout_constraintTop_toBottomOf="@id/view_top_story"
                    app:textBottom="@string/chuy_n_m_c"
                    app:textTop="@string/th_loai" />

                <com.example.appstory88.customview.ViewMenuHome
                    android:id="@+id/view_book_mark_story"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintDimensionRatio="2:1.1"
                    app:layout_constraintLeft_toRightOf="@id/view_category_story"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_top_story"
                    app:textBottom="@string/truy_n_c_a_b_n"
                    app:textTop="@string/bookmark" />


                <com.example.appstory88.customview.ViewListPreviewStory
                    android:id="@+id/rc_new_update_story"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="20dp"


                    app:layout_constraintTop_toBottomOf="@+id/view_book_mark_story" />

                <com.example.appstory88.customview.ViewListPreviewStory
                    android:id="@+id/rc_full_story"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"

                    app:layout_constraintTop_toBottomOf="@+id/rc_new_update_story" />

                <com.example.appstory88.customview.ViewListPreviewStory
                    android:id="@+id/rc_love_language_story"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"

                    app:layout_constraintTop_toBottomOf="@+id/rc_full_story" />

                <com.example.appstory88.customview.ViewListPreviewStory
                    android:id="@+id/rc_first_half_story"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/rc_love_language_story" />

                <com.example.appstory88.customview.ViewListPreviewStory
                    android:id="@+id/rc_passion_story"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/rc_first_half_story" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>